version 2021b, in progress
- gdtb data format: make the new variant the default
- tighten up on defbundle() syntax: no empty arguments
  allowed
- array definition: enforce the specific choice of type
- "wls" command, with 0/1 weights: compute $yhat and $uhat
  for the excluded observations
- "dpanel" estimation via the GUI: make the --dpdstyle flag
  configurable
- "dpanel" --verbose switch: provide some information on the
  instruments used
- "adf" command: support more accurate inference with
  improved p-values or critical values, for the GLS case
  in particular
- "xtab" command: clarify that the $result (matrix) accessor
  is just for the bivariate case
- "clear" command: add --functions option to remove all hansl
  functions from memory
- binary probit and logit: offer Estrella's pseudo R-squared
  as an alternative to McFadden, via --estrella option
- The functions mean, sum, sd, var, wmean, wsd and wvar now
  accept an optional boolean argument; specific to the
  cross-sectional statistics produced when list arguments
  are given, this allows skipping of missing values.
- hdprod(): introduce "shorthand" syntax (one argument only)
- user-defined functions: allow overloading of numeric
  arguments and return value (scalar, series or matrix)
- gretl timer ("stopwatch"): provide a separate timer for each
  level of function execution
- GUI model specification dialog: enable interactive search in
  lists of series
- GUI, saving contents of bundles: enable saving of integer
  members
- Fix bug: possible crash when displaying a matrix with very
  long column names in the GUI program
- Fix bug: broken covariance matrix from mols() with a large
  number of regressors

2021-01-18, version 2021a
- New function vma() for multiple time series
- quantile(): support variant methods Q7 and Q8 described
  in Hyndman and Fan (1996)
- defbundle(): add two shorthand variants of this function
- irf(): support calculation of multiple impulse responses