@@ -1,4 +1,5 @@
 version 2021b, in progress
+- New function trigamma(): second derivative of lngamma()
 - gdtb data format: make the new variant the default
 - tighten up on defbundle() syntax: no empty arguments
   allowed
